to fix the css on mobile

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -325,7 +325,7 @@ section.section_intro {
 #menu {
     position: absolute;
     width: 100%;
-    z-index: 100;
+    z-index: 1000;
     background: #2f2f2f;
 }
 
